--- a/view/index.html
+++ b/view/index.html
@@ -9,10 +9,10 @@
 			src: url('digital-7_mono.ttf') format("truetype");
 		}
 	</style>
-	<link href="css/default.css" type="text/css" rel="stylesheet">
-	<script type="text/javascript" src="./js/jquery.js"></script>
-	<script type="text/javascript" src="./js/garden.js"></script>
-    <script type="text/javascript" src="./js/functions.js"></script>
+	<link href="view/css/default.css" type="text/css" rel="stylesheet">
+	<script type="text/javascript" src="view/js/jquery.js"></script>
+	<script type="text/javascript" src="view/js/garden.js"></script>
+    <script type="text/javascript" src="view/js/functions.js"></script>
 </head>
 
 <body>
