--- a/view/index.html
+++ b/view/index.html
@@ -20,11 +20,11 @@
 		<div id="content">
 			<div id="code">
 				<span class="comments">/**</span><br />
-				<span class="space"/><span class="comments">* We are both Fudan SSers and programmers,</span><br />
+				<span class="space"/><span class="comments">* 我们都是程序员,</span><br />
 				<span class="space"/><span class="comments">* so I write some code to celebrate our 1st anniversary.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"hackerzhou"</span>);<br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"MaryNee"</span>);<br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"王若维"</span>);<br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"小丽丽"</span>);<br />
 				<span class="comments">// Nov 2, 2010, I told you I love you. </span><br />
 				i.love(u);<br />
 				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br />
